# crimeapp-mcp

./: .gitignore  LICENSE  README.md
crimeapp-mcp-server/: .gitignore  README.md  package-lock.json  package.json  wrangler.jsonc
crimeapp-mcp-server/scripts/: fetch-data.mjs  generate-d1-import.mjs
crimeapp-mcp-server/src/: index.ts
crimeapp-mcp-server/src/db/: crimeDatabase.ts  news.ts  planner.ts  sql-guardrails.ts
crimeapp-mcp-server/src/lib/: agent.ts  jwt.ts  openai.ts  secrets.ts  types.ts
crimeapp-mcp-server/src/mcp/tools/: crimeInsights.ts  listTools.ts  newsArticles.ts  openAiChat.ts  recentDaySummary.ts
crimeapp-mcp-server/src/types/: env.ts
lang-agent/: README.md  pyproject.toml
lang-agent/src/: __init__.py  config.py  main.py  mcp_debug.py
lang-agent/src/agent/: graph.py  services.py  state.py  tools.py
lang-agent/src/mcp_client/: client.py
