[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lang-agent"
version = "0.0.1"
description = "LangChain/LangGraph agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cisse N" }]
license = { text = "MIT" }

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "langchain",
  "langgraph",
  "langchain-openai",
  "requests",
  "python-dotenv",
  "pydantic",
  "mcp",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
